# advent_of_code_2024

./: .gitignore  Cargo.toml  cspell.json
common/: Cargo.toml
common/src/: error.rs  input.rs  lib.rs  position.rs
day01/: Cargo.toml
day01/benches/: bench_part1.rs  bench_part2.rs
day01/src/: error.rs  main.rs  parse.rs  part1.rs  part2.rs
day02/: Cargo.toml
day02/benches/: bench_part1.rs  bench_part2.rs
day02/src/: lib.rs  main.rs  parse.rs  part1.rs  part2_brute_force.rs  part2_optimized.rs  part2_optimized2.rs  part2_optimized2_dir.rs  part2_optimized2_skip.rs  part2_optimized2_skip_more.rs  part2_optimized2_tuple.rs
day03/: Cargo.toml
day03/benches/: bench_part1.rs  bench_part2.rs
day03/src/: error.rs  input.rs  lib.rs  main.rs  op.rs  parse_regex.rs  parse_winnow.rs  part1.rs  part2.rs
day04/: Cargo.toml
day04/benches/: bench_part1.rs  bench_part2.rs
day04/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_u8.rs  part2_u8_linear.rs
day05/: Cargo.toml
day05/benches/: bench_part1.rs  bench_part2.rs
day05/src/: document.rs  lib.rs  main.rs  parse copy.rs  parse.rs  part1.rs  part2.rs
day06/: Cargo.toml
day06/benches/: bench_part1.rs  bench_part2.rs
day06/src/: document.rs  lib.rs  main.rs  parse_fancy.rs  parse_simple.rs  part1.rs  part2.rs
day07/: Cargo.toml
day07/benches/: bench_part1.rs  bench_part2.rs
day07/src/: document.rs  main.rs  parse.rs  part1.rs  part2.rs
day08/: Cargo.toml
day08/benches/: bench_part1.rs  bench_part2.rs
day08/src/: main.rs  parse.rs  part1.rs  part2.rs
day09/: Cargo.toml
day09/benches/: bench_part1.rs  bench_part2.rs
day09/src/: main.rs  parse.rs  part1.rs  part2.rs
day10/: Cargo.toml
day10/benches/: bench_part1.rs  bench_part2.rs
day10/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_out_param.rs  part2.rs
day11/: Cargo.toml
day11/benches/: bench.rs
day11/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_base_fx.rs  part2_breadth.rs  part2_fxhashmap.rs  part2_inline.rs  part2_log.rs  part2_successors.rs  part2_vec.rs
day12/: Cargo.toml
day12/benches/: bench.rs
day12/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_neighbors.rs  part2.rs
day13/: Cargo.toml
day13/benches/: bench.rs
day13/src/: machine.rs  main.rs  parse.rs  part1.rs  part2.rs
day14/: Cargo.toml
day14/benches/: bench.rs
day14/src/: main.rs  parse.rs  part1.rs  part2.rs
day15/: Cargo.toml
day15/benches/: bench.rs
day15/src/: main.rs  parse.rs  part1.rs  part2.rs
day16/: Cargo.toml
day16/benches/: bench.rs
day16/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_fxhashset.rs  part2_inline.rs  part2_nil.rs  part2_simple.rs
day17/: Cargo.toml
day17/benches/: bench.rs
day17/src/: lib.rs  machine.rs  main.rs  parse.rs  part1.rs  part1_hardcoded.rs  part2.rs  part2_brute_force.rs
day18/: Cargo.toml
day18/benches/: bench.rs
day18/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_binary_search.rs  part2_brute_force.rs  part2_rayon.rs  part2_simplify.rs
day19/: Cargo.toml
day19/benches/: bench.rs
day19/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_cached.rs  part2_cached_fx.rs
day20/: Cargo.toml
day20/benches/: bench.rs
day20/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_combination.rs  part2_cost_first.rs  part2_filter_map.rs  part2_rayon.rs  part2_straighten.rs  part2_straighten_rayon.rs
day21/: Cargo.toml
day21/benches/: bench.rs
day21/src/: main.rs  parse.rs  part1.rs  part2.rs
day22/: Cargo.toml
day22/benches/: bench.rs
day22/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_optimize.rs
day23/: Cargo.toml
day23/benches/: bench.rs
day23/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_bf_rayon.rs  part2_brute_force.rs  part2_hukasu.rs  part2_optimize.rs
day24/: Cargo.toml
day24/benches/: bench.rs
day24/src/: lib.rs  machine.rs  main.rs  parse.rs  part1.rs  part2.rs
day25/: Cargo.toml
day25/benches/: bench.rs
day25/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_logic_sum.rs
template/: Cargo.toml
template/benches/: bench.rs  bench_part1.rs  bench_part2.rs
template/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs
