[workspace]
resolver = "2"
members = ["common", "day*", "template"]

[workspace.dependencies]
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
thiserror = "2.0.3"
miette = { version = "7.4.0", features = ["fancy"] }
owo-colors = "4.1.0"
winnow = { version = "0.6.20", features = ["simd"] }
#nom_locate = "4.2.0"
rayon = "1.10.0"
itertools = "0.13.0"
num = "0.4.3"
# petgraph
# pathfinding
# ndarray ndarray-linearalg
divan = "0.1.16"
rustc-hash = "2.1.0"
