[package]
name = "day02"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
winnow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "bench_part1"
harness = false

[[bench]]
name = "bench_part2"
harness = false
