[package]
name = "day06"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
clap = { workspace = true }
winnow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
#enumflags2 = "0.7.10"
#bitflags = "2.6.0"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "bench_part1"
harness = false

[[bench]]
name = "bench_part2"
harness = false
