[package]
name = "day14"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
clap = { workspace = true }
winnow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
num = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "bench"
harness = false
